[gd_scene load_steps=19 format=3 uid="uid://cvn3lalqefsmq"]

[ext_resource type="Script" path="res://Script/player.gd" id="1_oqn2j"]
[ext_resource type="Texture2D" uid="uid://c5hjyf3ex83ca" path="res://Sprite/Animation/Player_Idle.png" id="2_0wrfh"]
[ext_resource type="Texture2D" uid="uid://ust5lcibv8ds" path="res://Sprite/Animation/Player_Movement.png" id="3_7yisi"]
[ext_resource type="Texture2D" uid="uid://17b7m0320hwt" path="res://Sprite/Key/E_Key.png" id="4_yfpq6"]
[ext_resource type="PackedScene" uid="uid://dousmr1x17h5b" path="res://Scene/UI/wood_count.tscn" id="5_cij7c"]
[ext_resource type="PackedScene" uid="uid://dyvyo452mdcma" path="res://Scene/arrow_ver_2.tscn" id="5_ggcyu"]
[ext_resource type="PackedScene" uid="uid://bwhwinukjyq8q" path="res://Scene/UI/battery_count.tscn" id="6_l4xxf"]
[ext_resource type="PackedScene" uid="uid://6o3jt30qkxin" path="res://Scene/UI/Ui_Place_Torch.tscn" id="7_5nvm2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l1sdi"]
atlas = ExtResource("2_0wrfh")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eodtq"]
atlas = ExtResource("2_0wrfh")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rpcc"]
atlas = ExtResource("3_7yisi")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xce4"]
atlas = ExtResource("3_7yisi")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1y3dd"]
atlas = ExtResource("3_7yisi")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3077o"]
atlas = ExtResource("3_7yisi")
region = Rect2(48, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qxaxe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1sdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eodtq")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rpcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xce4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1y3dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3077o")
}],
"loop": true,
"name": &"moving",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w4iv0"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o06qv"]
bg_color = Color(0, 1, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qicit"]
size = Vector2(16, 30)

[node name="Player" type="CharacterBody2D"]
z_index = 10
script = ExtResource("1_oqn2j")

[node name="Player Sprite" type="AnimatedSprite2D" parent="."]
modulate = Color(0.560784, 0.560784, 0.560784, 1)
z_index = 30
scale = Vector2(1.00393, 1)
sprite_frames = SubResource("SpriteFrames_qxaxe")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.765858

[node name="E_Key" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.513726, 0.513726, 0.513726, 1)
position = Vector2(-1, -23)
texture = ExtResource("4_yfpq6")

[node name="Arrow" parent="." instance=ExtResource("5_ggcyu")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="Background" type="ColorRect" parent="Camera2D"]
z_index = -30
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -258.0
offset_right = 362.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00784314, 0.00784314, 0.00784314, 1)

[node name="Health Bar" type="ProgressBar" parent="Camera2D"]
z_index = 20
offset_left = -210.0
offset_top = -117.0
offset_right = -110.0
offset_bottom = -112.0
theme_override_styles/background = SubResource("StyleBoxFlat_w4iv0")
theme_override_styles/fill = SubResource("StyleBoxFlat_o06qv")
step = 1.0
show_percentage = false

[node name="PickUpArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
shape = SubResource("RectangleShape2D_qicit")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="wood_count" parent="." instance=ExtResource("5_cij7c")]
position = Vector2(171, 82)

[node name="battery_count" parent="." instance=ExtResource("6_l4xxf")]
position = Vector2(171, 103)

[node name="ui_torch" parent="." instance=ExtResource("7_5nvm2")]
position = Vector2(-205, 100)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
